parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    POWER
    COMPA
    ANDOP
    OROPE
    SLCOM
    BLCOM
    DOTOP
    COLON
    INPUT
    OUTPT

Grammar

Rule 0     S' -> foo
Rule 1     foo -> program
Rule 2     program -> declarationList
Rule 3     program -> statement-list
Rule 4     declarationList -> declaration
Rule 5     declarationList -> declaration declarationList
Rule 6     declaration -> varDeclaration
Rule 7     declaration -> constDeclaration
Rule 8     declaration -> staticDeclaration
Rule 9     declaration -> funcDeclaration
Rule 10    varDeclaration -> LET IDVAR EQUAL expression SEMCL
Rule 11    varDeclaration -> LET IDVAR EQUAL identifier SEMCL
Rule 12    constDeclaration -> CONST IDVAR EQUAL expression SEMCL
Rule 13    staticDeclaration -> STATIC IDVAR EQUAL expression SEMCL
Rule 14    funcDeclaration -> FN function
Rule 15    function -> FN parameters block
Rule 16    parameters -> OPENP CLOSP
Rule 17    parameters -> OPENP paramList CLOSP
Rule 18    parameters -> OPENP expression CLOSP
Rule 19    paramList -> parameter
Rule 20    paramList -> parameter COMMA paramList
Rule 21    parameter -> IDVAR
Rule 22    parameter -> INTVR
Rule 23    parameter -> STRNG
Rule 24    block -> LBCKT RBCKT
Rule 25    block -> LBCKT statement-list RBCKT
Rule 26    statement-list -> stmt
Rule 27    statement-list -> stmt statement-list
Rule 28    inputStmt -> STDIN OPENP stmt CLOSP SEMCL
Rule 29    outputStmt -> PRINTLN OPENP stmt CLOSP SEMCL
Rule 30    stmt -> expression
Rule 31    stmt -> declaration
Rule 32    stmt -> selectionStmt
Rule 33    stmt -> iterationStmt
Rule 34    stmt -> inputStmt
Rule 35    stmt -> outputStmt
Rule 36    expression -> basicExp
Rule 37    expression -> assignmentExp SEMCL
Rule 38    expression -> comparisonExp
Rule 39    expression -> boolExp
Rule 40    basicExp -> INTVR
Rule 41    basicExp -> STRNG
Rule 42    basicExp -> IDVAR
Rule 43    assignmentExp -> identifier sumOp basicExp
Rule 44    assignmentExp -> identifier sumOp assignmentExp
Rule 45    identifier -> IDVAR
Rule 46    identifier -> INTVR
Rule 47    comparisonExp -> basicExp relop basicExp
Rule 48    comparisonExp -> basicExp relop comparisonExp
Rule 49    relop -> LESST
Rule 50    relop -> LSSEQ
Rule 51    relop -> GREAT
Rule 52    relop -> GRTEQ
Rule 53    relop -> EQUAL
Rule 54    relop -> UNEQL
Rule 55    relop -> EQLTO
Rule 56    sumOp -> ADDOP
Rule 57    sumOp -> SUBOP
Rule 58    sumOp -> DEROP
Rule 59    sumOp -> QUOOP
Rule 60    sumOp -> EQUAL
Rule 61    sumOp -> REMOP
Rule 62    selectionStmt -> IF OPENP expression CLOSP block
Rule 63    selectionStmt -> IF OPENP expression CLOSP block ELSE block
Rule 64    iterationStmt -> FOR expression IN expression
Rule 65    iterationStmt -> WHILE parameters block
Rule 66    boolExp -> TRUE
Rule 67    boolExp -> FALSE

Terminals, with rules where they appear

ADDOP                : 56
ANDOP                : 
BLCOM                : 
CLOSP                : 16 17 18 28 29 62 63
COLON                : 
COMMA                : 20
COMPA                : 
CONST                : 12
DEROP                : 58
DOTOP                : 
ELSE                 : 63
EQLTO                : 55
EQUAL                : 10 11 12 13 53 60
FALSE                : 67
FN                   : 14 15
FOR                  : 64
GREAT                : 51
GRTEQ                : 52
IDVAR                : 10 11 12 13 21 42 45
IF                   : 62 63
IN                   : 64
INPUT                : 
INTVR                : 22 40 46
LBCKT                : 24 25
LESST                : 49
LET                  : 10 11
LSSEQ                : 50
OPENP                : 16 17 18 28 29 62 63
OROPE                : 
OUTPT                : 
POWER                : 
PRINTLN              : 29
QUOOP                : 59
RBCKT                : 24 25
REMOP                : 61
SEMCL                : 10 11 12 13 28 29 37
SLCOM                : 
STATIC               : 13
STDIN                : 28
STRNG                : 23 41
SUBOP                : 57
TRUE                 : 66
UNEQL                : 54
WHILE                : 65
error                : 

Nonterminals, with rules where they appear

assignmentExp        : 37 44
basicExp             : 36 43 47 47 48
block                : 15 62 63 63 65
boolExp              : 39
comparisonExp        : 38 48
constDeclaration     : 7
declaration          : 4 5 31
declarationList      : 2 5
expression           : 10 12 13 18 30 62 63 64 64
foo                  : 0
funcDeclaration      : 9
function             : 14
identifier           : 11 43 44
inputStmt            : 34
iterationStmt        : 33
outputStmt           : 35
paramList            : 17 20
parameter            : 19 20
parameters           : 15 65
program              : 1
relop                : 47 48
selectionStmt        : 32
statement-list       : 3 25 27
staticDeclaration    : 8
stmt                 : 26 27 28 29
sumOp                : 43 44
varDeclaration       : 6

Parsing method: LALR

state 0

    (0) S' -> . foo
    (1) foo -> . program
    (2) program -> . declarationList
    (3) program -> . statement-list
    (4) declarationList -> . declaration
    (5) declarationList -> . declaration declarationList
    (26) statement-list -> . stmt
    (27) statement-list -> . stmt statement-list
    (6) declaration -> . varDeclaration
    (7) declaration -> . constDeclaration
    (8) declaration -> . staticDeclaration
    (9) declaration -> . funcDeclaration
    (30) stmt -> . expression
    (31) stmt -> . declaration
    (32) stmt -> . selectionStmt
    (33) stmt -> . iterationStmt
    (34) stmt -> . inputStmt
    (35) stmt -> . outputStmt
    (10) varDeclaration -> . LET IDVAR EQUAL expression SEMCL
    (11) varDeclaration -> . LET IDVAR EQUAL identifier SEMCL
    (12) constDeclaration -> . CONST IDVAR EQUAL expression SEMCL
    (13) staticDeclaration -> . STATIC IDVAR EQUAL expression SEMCL
    (14) funcDeclaration -> . FN function
    (36) expression -> . basicExp
    (37) expression -> . assignmentExp SEMCL
    (38) expression -> . comparisonExp
    (39) expression -> . boolExp
    (62) selectionStmt -> . IF OPENP expression CLOSP block
    (63) selectionStmt -> . IF OPENP expression CLOSP block ELSE block
    (64) iterationStmt -> . FOR expression IN expression
    (65) iterationStmt -> . WHILE parameters block
    (28) inputStmt -> . STDIN OPENP stmt CLOSP SEMCL
    (29) outputStmt -> . PRINTLN OPENP stmt CLOSP SEMCL
    (40) basicExp -> . INTVR
    (41) basicExp -> . STRNG
    (42) basicExp -> . IDVAR
    (43) assignmentExp -> . identifier sumOp basicExp
    (44) assignmentExp -> . identifier sumOp assignmentExp
    (47) comparisonExp -> . basicExp relop basicExp
    (48) comparisonExp -> . basicExp relop comparisonExp
    (66) boolExp -> . TRUE
    (67) boolExp -> . FALSE
    (45) identifier -> . IDVAR
    (46) identifier -> . INTVR

    LET             shift and go to state 16
    CONST           shift and go to state 19
    STATIC          shift and go to state 20
    FN              shift and go to state 21
    IF              shift and go to state 26
    FOR             shift and go to state 27
    WHILE           shift and go to state 28
    STDIN           shift and go to state 29
    PRINTLN         shift and go to state 30
    INTVR           shift and go to state 31
    STRNG           shift and go to state 32
    IDVAR           shift and go to state 17
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34

    foo                            shift and go to state 1
    program                        shift and go to state 2
    declarationList                shift and go to state 3
    statement-list                 shift and go to state 4
    declaration                    shift and go to state 5
    stmt                           shift and go to state 6
    varDeclaration                 shift and go to state 7
    constDeclaration               shift and go to state 8
    staticDeclaration              shift and go to state 9
    funcDeclaration                shift and go to state 10
    expression                     shift and go to state 11
    selectionStmt                  shift and go to state 12
    iterationStmt                  shift and go to state 13
    inputStmt                      shift and go to state 14
    outputStmt                     shift and go to state 15
    identifier                     shift and go to state 18
    basicExp                       shift and go to state 22
    assignmentExp                  shift and go to state 23
    comparisonExp                  shift and go to state 24
    boolExp                        shift and go to state 25

state 1

    (0) S' -> foo .



state 2

    (1) foo -> program .

    $end            reduce using rule 1 (foo -> program .)


state 3

    (2) program -> declarationList .

    $end            reduce using rule 2 (program -> declarationList .)


state 4

    (3) program -> statement-list .

    $end            reduce using rule 3 (program -> statement-list .)


state 5

    (4) declarationList -> declaration .
    (5) declarationList -> declaration . declarationList
    (31) stmt -> declaration .
    (4) declarationList -> . declaration
    (5) declarationList -> . declaration declarationList
    (6) declaration -> . varDeclaration
    (7) declaration -> . constDeclaration
    (8) declaration -> . staticDeclaration
    (9) declaration -> . funcDeclaration
    (10) varDeclaration -> . LET IDVAR EQUAL expression SEMCL
    (11) varDeclaration -> . LET IDVAR EQUAL identifier SEMCL
    (12) constDeclaration -> . CONST IDVAR EQUAL expression SEMCL
    (13) staticDeclaration -> . STATIC IDVAR EQUAL expression SEMCL
    (14) funcDeclaration -> . FN function

  ! reduce/reduce conflict for $end resolved using rule 4 (declarationList -> declaration .)
  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for STATIC resolved as shift
  ! shift/reduce conflict for FN resolved as shift
    $end            reduce using rule 4 (declarationList -> declaration .)
    IF              reduce using rule 31 (stmt -> declaration .)
    FOR             reduce using rule 31 (stmt -> declaration .)
    WHILE           reduce using rule 31 (stmt -> declaration .)
    STDIN           reduce using rule 31 (stmt -> declaration .)
    PRINTLN         reduce using rule 31 (stmt -> declaration .)
    INTVR           reduce using rule 31 (stmt -> declaration .)
    STRNG           reduce using rule 31 (stmt -> declaration .)
    IDVAR           reduce using rule 31 (stmt -> declaration .)
    TRUE            reduce using rule 31 (stmt -> declaration .)
    FALSE           reduce using rule 31 (stmt -> declaration .)
    LET             shift and go to state 16
    CONST           shift and go to state 19
    STATIC          shift and go to state 20
    FN              shift and go to state 21

  ! LET             [ reduce using rule 31 (stmt -> declaration .) ]
  ! CONST           [ reduce using rule 31 (stmt -> declaration .) ]
  ! STATIC          [ reduce using rule 31 (stmt -> declaration .) ]
  ! FN              [ reduce using rule 31 (stmt -> declaration .) ]
  ! $end            [ reduce using rule 31 (stmt -> declaration .) ]

    declaration                    shift and go to state 35
    declarationList                shift and go to state 36
    varDeclaration                 shift and go to state 7
    constDeclaration               shift and go to state 8
    staticDeclaration              shift and go to state 9
    funcDeclaration                shift and go to state 10

state 6

    (26) statement-list -> stmt .
    (27) statement-list -> stmt . statement-list
    (26) statement-list -> . stmt
    (27) statement-list -> . stmt statement-list
    (30) stmt -> . expression
    (31) stmt -> . declaration
    (32) stmt -> . selectionStmt
    (33) stmt -> . iterationStmt
    (34) stmt -> . inputStmt
    (35) stmt -> . outputStmt
    (36) expression -> . basicExp
    (37) expression -> . assignmentExp SEMCL
    (38) expression -> . comparisonExp
    (39) expression -> . boolExp
    (6) declaration -> . varDeclaration
    (7) declaration -> . constDeclaration
    (8) declaration -> . staticDeclaration
    (9) declaration -> . funcDeclaration
    (62) selectionStmt -> . IF OPENP expression CLOSP block
    (63) selectionStmt -> . IF OPENP expression CLOSP block ELSE block
    (64) iterationStmt -> . FOR expression IN expression
    (65) iterationStmt -> . WHILE parameters block
    (28) inputStmt -> . STDIN OPENP stmt CLOSP SEMCL
    (29) outputStmt -> . PRINTLN OPENP stmt CLOSP SEMCL
    (40) basicExp -> . INTVR
    (41) basicExp -> . STRNG
    (42) basicExp -> . IDVAR
    (43) assignmentExp -> . identifier sumOp basicExp
    (44) assignmentExp -> . identifier sumOp assignmentExp
    (47) comparisonExp -> . basicExp relop basicExp
    (48) comparisonExp -> . basicExp relop comparisonExp
    (66) boolExp -> . TRUE
    (67) boolExp -> . FALSE
    (10) varDeclaration -> . LET IDVAR EQUAL expression SEMCL
    (11) varDeclaration -> . LET IDVAR EQUAL identifier SEMCL
    (12) constDeclaration -> . CONST IDVAR EQUAL expression SEMCL
    (13) staticDeclaration -> . STATIC IDVAR EQUAL expression SEMCL
    (14) funcDeclaration -> . FN function
    (45) identifier -> . IDVAR
    (46) identifier -> . INTVR

    $end            reduce using rule 26 (statement-list -> stmt .)
    RBCKT           reduce using rule 26 (statement-list -> stmt .)
    IF              shift and go to state 26
    FOR             shift and go to state 27
    WHILE           shift and go to state 28
    STDIN           shift and go to state 29
    PRINTLN         shift and go to state 30
    INTVR           shift and go to state 31
    STRNG           shift and go to state 32
    IDVAR           shift and go to state 17
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    LET             shift and go to state 16
    CONST           shift and go to state 19
    STATIC          shift and go to state 20
    FN              shift and go to state 21

    stmt                           shift and go to state 6
    statement-list                 shift and go to state 37
    expression                     shift and go to state 11
    declaration                    shift and go to state 38
    selectionStmt                  shift and go to state 12
    iterationStmt                  shift and go to state 13
    inputStmt                      shift and go to state 14
    outputStmt                     shift and go to state 15
    basicExp                       shift and go to state 22
    assignmentExp                  shift and go to state 23
    comparisonExp                  shift and go to state 24
    boolExp                        shift and go to state 25
    varDeclaration                 shift and go to state 7
    constDeclaration               shift and go to state 8
    staticDeclaration              shift and go to state 9
    funcDeclaration                shift and go to state 10
    identifier                     shift and go to state 18

state 7

    (6) declaration -> varDeclaration .

    LET             reduce using rule 6 (declaration -> varDeclaration .)
    CONST           reduce using rule 6 (declaration -> varDeclaration .)
    STATIC          reduce using rule 6 (declaration -> varDeclaration .)
    FN              reduce using rule 6 (declaration -> varDeclaration .)
    $end            reduce using rule 6 (declaration -> varDeclaration .)
    IF              reduce using rule 6 (declaration -> varDeclaration .)
    FOR             reduce using rule 6 (declaration -> varDeclaration .)
    WHILE           reduce using rule 6 (declaration -> varDeclaration .)
    STDIN           reduce using rule 6 (declaration -> varDeclaration .)
    PRINTLN         reduce using rule 6 (declaration -> varDeclaration .)
    INTVR           reduce using rule 6 (declaration -> varDeclaration .)
    STRNG           reduce using rule 6 (declaration -> varDeclaration .)
    IDVAR           reduce using rule 6 (declaration -> varDeclaration .)
    TRUE            reduce using rule 6 (declaration -> varDeclaration .)
    FALSE           reduce using rule 6 (declaration -> varDeclaration .)
    RBCKT           reduce using rule 6 (declaration -> varDeclaration .)
    CLOSP           reduce using rule 6 (declaration -> varDeclaration .)


state 8

    (7) declaration -> constDeclaration .

    LET             reduce using rule 7 (declaration -> constDeclaration .)
    CONST           reduce using rule 7 (declaration -> constDeclaration .)
    STATIC          reduce using rule 7 (declaration -> constDeclaration .)
    FN              reduce using rule 7 (declaration -> constDeclaration .)
    $end            reduce using rule 7 (declaration -> constDeclaration .)
    IF              reduce using rule 7 (declaration -> constDeclaration .)
    FOR             reduce using rule 7 (declaration -> constDeclaration .)
    WHILE           reduce using rule 7 (declaration -> constDeclaration .)
    STDIN           reduce using rule 7 (declaration -> constDeclaration .)
    PRINTLN         reduce using rule 7 (declaration -> constDeclaration .)
    INTVR           reduce using rule 7 (declaration -> constDeclaration .)
    STRNG           reduce using rule 7 (declaration -> constDeclaration .)
    IDVAR           reduce using rule 7 (declaration -> constDeclaration .)
    TRUE            reduce using rule 7 (declaration -> constDeclaration .)
    FALSE           reduce using rule 7 (declaration -> constDeclaration .)
    RBCKT           reduce using rule 7 (declaration -> constDeclaration .)
    CLOSP           reduce using rule 7 (declaration -> constDeclaration .)


state 9

    (8) declaration -> staticDeclaration .

    LET             reduce using rule 8 (declaration -> staticDeclaration .)
    CONST           reduce using rule 8 (declaration -> staticDeclaration .)
    STATIC          reduce using rule 8 (declaration -> staticDeclaration .)
    FN              reduce using rule 8 (declaration -> staticDeclaration .)
    $end            reduce using rule 8 (declaration -> staticDeclaration .)
    IF              reduce using rule 8 (declaration -> staticDeclaration .)
    FOR             reduce using rule 8 (declaration -> staticDeclaration .)
    WHILE           reduce using rule 8 (declaration -> staticDeclaration .)
    STDIN           reduce using rule 8 (declaration -> staticDeclaration .)
    PRINTLN         reduce using rule 8 (declaration -> staticDeclaration .)
    INTVR           reduce using rule 8 (declaration -> staticDeclaration .)
    STRNG           reduce using rule 8 (declaration -> staticDeclaration .)
    IDVAR           reduce using rule 8 (declaration -> staticDeclaration .)
    TRUE            reduce using rule 8 (declaration -> staticDeclaration .)
    FALSE           reduce using rule 8 (declaration -> staticDeclaration .)
    RBCKT           reduce using rule 8 (declaration -> staticDeclaration .)
    CLOSP           reduce using rule 8 (declaration -> staticDeclaration .)


state 10

    (9) declaration -> funcDeclaration .

    LET             reduce using rule 9 (declaration -> funcDeclaration .)
    CONST           reduce using rule 9 (declaration -> funcDeclaration .)
    STATIC          reduce using rule 9 (declaration -> funcDeclaration .)
    FN              reduce using rule 9 (declaration -> funcDeclaration .)
    $end            reduce using rule 9 (declaration -> funcDeclaration .)
    IF              reduce using rule 9 (declaration -> funcDeclaration .)
    FOR             reduce using rule 9 (declaration -> funcDeclaration .)
    WHILE           reduce using rule 9 (declaration -> funcDeclaration .)
    STDIN           reduce using rule 9 (declaration -> funcDeclaration .)
    PRINTLN         reduce using rule 9 (declaration -> funcDeclaration .)
    INTVR           reduce using rule 9 (declaration -> funcDeclaration .)
    STRNG           reduce using rule 9 (declaration -> funcDeclaration .)
    IDVAR           reduce using rule 9 (declaration -> funcDeclaration .)
    TRUE            reduce using rule 9 (declaration -> funcDeclaration .)
    FALSE           reduce using rule 9 (declaration -> funcDeclaration .)
    RBCKT           reduce using rule 9 (declaration -> funcDeclaration .)
    CLOSP           reduce using rule 9 (declaration -> funcDeclaration .)


state 11

    (30) stmt -> expression .

    IF              reduce using rule 30 (stmt -> expression .)
    FOR             reduce using rule 30 (stmt -> expression .)
    WHILE           reduce using rule 30 (stmt -> expression .)
    STDIN           reduce using rule 30 (stmt -> expression .)
    PRINTLN         reduce using rule 30 (stmt -> expression .)
    INTVR           reduce using rule 30 (stmt -> expression .)
    STRNG           reduce using rule 30 (stmt -> expression .)
    IDVAR           reduce using rule 30 (stmt -> expression .)
    TRUE            reduce using rule 30 (stmt -> expression .)
    FALSE           reduce using rule 30 (stmt -> expression .)
    LET             reduce using rule 30 (stmt -> expression .)
    CONST           reduce using rule 30 (stmt -> expression .)
    STATIC          reduce using rule 30 (stmt -> expression .)
    FN              reduce using rule 30 (stmt -> expression .)
    $end            reduce using rule 30 (stmt -> expression .)
    RBCKT           reduce using rule 30 (stmt -> expression .)
    CLOSP           reduce using rule 30 (stmt -> expression .)


state 12

    (32) stmt -> selectionStmt .

    IF              reduce using rule 32 (stmt -> selectionStmt .)
    FOR             reduce using rule 32 (stmt -> selectionStmt .)
    WHILE           reduce using rule 32 (stmt -> selectionStmt .)
    STDIN           reduce using rule 32 (stmt -> selectionStmt .)
    PRINTLN         reduce using rule 32 (stmt -> selectionStmt .)
    INTVR           reduce using rule 32 (stmt -> selectionStmt .)
    STRNG           reduce using rule 32 (stmt -> selectionStmt .)
    IDVAR           reduce using rule 32 (stmt -> selectionStmt .)
    TRUE            reduce using rule 32 (stmt -> selectionStmt .)
    FALSE           reduce using rule 32 (stmt -> selectionStmt .)
    LET             reduce using rule 32 (stmt -> selectionStmt .)
    CONST           reduce using rule 32 (stmt -> selectionStmt .)
    STATIC          reduce using rule 32 (stmt -> selectionStmt .)
    FN              reduce using rule 32 (stmt -> selectionStmt .)
    $end            reduce using rule 32 (stmt -> selectionStmt .)
    RBCKT           reduce using rule 32 (stmt -> selectionStmt .)
    CLOSP           reduce using rule 32 (stmt -> selectionStmt .)


state 13

    (33) stmt -> iterationStmt .

    IF              reduce using rule 33 (stmt -> iterationStmt .)
    FOR             reduce using rule 33 (stmt -> iterationStmt .)
    WHILE           reduce using rule 33 (stmt -> iterationStmt .)
    STDIN           reduce using rule 33 (stmt -> iterationStmt .)
    PRINTLN         reduce using rule 33 (stmt -> iterationStmt .)
    INTVR           reduce using rule 33 (stmt -> iterationStmt .)
    STRNG           reduce using rule 33 (stmt -> iterationStmt .)
    IDVAR           reduce using rule 33 (stmt -> iterationStmt .)
    TRUE            reduce using rule 33 (stmt -> iterationStmt .)
    FALSE           reduce using rule 33 (stmt -> iterationStmt .)
    LET             reduce using rule 33 (stmt -> iterationStmt .)
    CONST           reduce using rule 33 (stmt -> iterationStmt .)
    STATIC          reduce using rule 33 (stmt -> iterationStmt .)
    FN              reduce using rule 33 (stmt -> iterationStmt .)
    $end            reduce using rule 33 (stmt -> iterationStmt .)
    RBCKT           reduce using rule 33 (stmt -> iterationStmt .)
    CLOSP           reduce using rule 33 (stmt -> iterationStmt .)


state 14

    (34) stmt -> inputStmt .

    IF              reduce using rule 34 (stmt -> inputStmt .)
    FOR             reduce using rule 34 (stmt -> inputStmt .)
    WHILE           reduce using rule 34 (stmt -> inputStmt .)
    STDIN           reduce using rule 34 (stmt -> inputStmt .)
    PRINTLN         reduce using rule 34 (stmt -> inputStmt .)
    INTVR           reduce using rule 34 (stmt -> inputStmt .)
    STRNG           reduce using rule 34 (stmt -> inputStmt .)
    IDVAR           reduce using rule 34 (stmt -> inputStmt .)
    TRUE            reduce using rule 34 (stmt -> inputStmt .)
    FALSE           reduce using rule 34 (stmt -> inputStmt .)
    LET             reduce using rule 34 (stmt -> inputStmt .)
    CONST           reduce using rule 34 (stmt -> inputStmt .)
    STATIC          reduce using rule 34 (stmt -> inputStmt .)
    FN              reduce using rule 34 (stmt -> inputStmt .)
    $end            reduce using rule 34 (stmt -> inputStmt .)
    RBCKT           reduce using rule 34 (stmt -> inputStmt .)
    CLOSP           reduce using rule 34 (stmt -> inputStmt .)


state 15

    (35) stmt -> outputStmt .

    IF              reduce using rule 35 (stmt -> outputStmt .)
    FOR             reduce using rule 35 (stmt -> outputStmt .)
    WHILE           reduce using rule 35 (stmt -> outputStmt .)
    STDIN           reduce using rule 35 (stmt -> outputStmt .)
    PRINTLN         reduce using rule 35 (stmt -> outputStmt .)
    INTVR           reduce using rule 35 (stmt -> outputStmt .)
    STRNG           reduce using rule 35 (stmt -> outputStmt .)
    IDVAR           reduce using rule 35 (stmt -> outputStmt .)
    TRUE            reduce using rule 35 (stmt -> outputStmt .)
    FALSE           reduce using rule 35 (stmt -> outputStmt .)
    LET             reduce using rule 35 (stmt -> outputStmt .)
    CONST           reduce using rule 35 (stmt -> outputStmt .)
    STATIC          reduce using rule 35 (stmt -> outputStmt .)
    FN              reduce using rule 35 (stmt -> outputStmt .)
    $end            reduce using rule 35 (stmt -> outputStmt .)
    RBCKT           reduce using rule 35 (stmt -> outputStmt .)
    CLOSP           reduce using rule 35 (stmt -> outputStmt .)


state 16
